Updated to be separate library.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,16 +2,33 @@ cmake_minimum_required (VERSION 3.22 FATAL_ERROR)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./bin)
 
+find_package(cxx_coro_stream REQUIRED)
 find_package(googletest REQUIRED)
 find_package(Threads REQUIRED)
 
 set(TESTS
-  fp/either
-  fp/fold
-  fp/option
-  fp/try
+  string/compare
+  string/fixed
+  string/join
+  string/lexical_cast
+  string/lexical_cast_stl
+  string/remove_prefix
+  string/replace
+  string/split
+  string/string
+  string/tolower
+  string/trim
   )
 
+set(LIBRARIES
+  cxx_core_string
+  cxx_core_pp::cxx_core_pp
+  cxx_core_mp::cxx_core_mp
+  cxx_core_tuple::cxx_core_tuple
+  cxx_core_util::cxx_core_util
+  cxx_coro_stream::cxx_coro_stream
+  googletest::cxx-googletest
+  Threads::Threads)
+
 include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/configure_tests.cmake)
-set(LIBS "cxx_core_mp::cxx_core_mp;googletest::cxx-googletest;Threads::Threads")
-configure_tests("core" "${LIBS}" ${TESTS})
+configure_tests("core" "${LIBRARIES}" ${TESTS})
