--- a/cmake/cxx_core_stringConfig.cmake.in
+++ b/cmake/cxx_core_stringConfig.cmake.in
@@ -4,4 +4,8 @@ include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
 check_required_components("@PROJECT_NAME@")
 
 include(CMakeFindDependencyMacro)
+find_dependency(cxx_core_pp)
 find_dependency(cxx_core_mp)
+find_dependency(cxx_core_tuple)
+find_dependency(cxx_core_fp)
+find_dependency(cxx_core_util)
