Updated Github build.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,6 +24,9 @@ jobs:
           ${{ secrets.CXX_CORE_PP }}
           ${{ secrets.CXX_CORE_MP }}
           ${{ secrets.CXX_CORE_FP }}
+          ${{ secrets.CXX_CORE_TUPLE }}
+          ${{ secrets.CXX_CORE_UTIL }}
+          ${{ secrets.CXX_CORO_STREAM }}
         
     - name: Checkout cxx-core-fp
       uses: actions/checkout@v2
@@ -44,14 +47,14 @@ jobs:
         export CXX=clang++-11
         mkdir cxx-depends/build && pushd cxx-depends/build
         cmake -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/opt ..
-        make cxx_core_mp googletest
+        make cxx_core_fp cxx_core_util googletest
         popd
 
     - name: Build and run the tests
       run: |
         export CC=clang-11
         export CXX=clang++-11
-        mkdir cxx-core-fp/build && pushd cxx-core-fp/build
+        mkdir cxx-core-string/build && pushd cxx-core-string/build
         cmake -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/opt ..
         make
         make check
