Removed dependency on cxx-core-util.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,8 @@ find_package(cxx_core_pp REQUIRED)
 find_package(cxx_core_mp REQUIRED)
 find_package(cxx_core_tuple REQUIRED)
 find_package(cxx_core_fp REQUIRED)
-find_package(cxx_core_util REQUIRED)
+find_package(cxx_coro_stream REQUIRED)
+find_package(fmt REQUIRED)
 
 # Output configuration
 #
@@ -74,11 +75,11 @@ endforeach()
 add_library(cxx_core_string ${FILES})
 
 target_link_libraries(cxx_core_string PUBLIC
-  cxx_core_util::cxx_core_util
   cxx_core_pp::cxx_core_pp
   cxx_core_mp::cxx_core_mp
   cxx_core_tuple::cxx_core_tuple
-  cxx_core_util::cxx_core_util)
+  fmt::fmt
+  )
 
 target_include_directories(cxx_core_string
   PUBLIC
