--- a/cmake/cxx_core_stringConfig.cmake.in
+++ b/cmake/cxx_core_stringConfig.cmake.in
@@ -8,4 +8,5 @@ find_dependency(cxx_core_pp)
 find_dependency(cxx_core_mp)
 find_dependency(cxx_core_tuple)
 find_dependency(cxx_core_fp)
-find_dependency(cxx_core_util)
+find_dependency(cxx_coro_stream)
+find_dependency(fmt)
