WIP. Move to cpp-core.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required (VERSION 3.22 FATAL_ERROR)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./bin)
 
-find_package(cxx_coro_stream REQUIRED)
-find_package(googletest REQUIRED)
+find_package(stream REQUIRED)
+find_package(GTest REQUIRED)
 find_package(Threads REQUIRED)
 
 set(TESTS
@@ -21,12 +21,12 @@ set(TESTS
   )
 
 set(LIBRARIES
-  cxx_core_string
-  cxx_core_pp::cxx_core_pp
-  cxx_core_mp::cxx_core_mp
-  cxx_core_tuple::cxx_core_tuple
-  cxx_coro_stream::cxx_coro_stream
-  googletest::cxx-googletest
+  string
+  pp::pp
+  mp::mp
+  tuple::tuple
+  stream::stream
+  GTest::gtest
   Threads::Threads)
 
 include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/configure_tests.cmake)
