--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,37 +16,24 @@ jobs:
     - name: Requirements
       run: sudo apt-get install -y clang-11 libc++-11-dev libc++abi-11-dev
       
-    - name: SSH Agent
-      uses: webfactory/ssh-agent@v0.5.4
-      with:
-        ssh-private-key: |
-          ${{ secrets.CXX_DEPENDS }}
-          ${{ secrets.CXX_CORE_FP }}
-          ${{ secrets.CXX_CORE_MP }}
-          ${{ secrets.CXX_CORE_PP }}
-          ${{ secrets.CXX_CORE_STRING }}
-          ${{ secrets.CXX_CORE_TUPLE }}
-          ${{ secrets.CXX_CORE_UTIL }}
-          ${{ secrets.CXX_CORO_STREAM }}
-        
-    - name: Checkout cxx-core-string
+    - name: Checkout string
       uses: actions/checkout@v2
       with:
-        repository: melton1968/cxx-core-string
-        path: cxx-core-string
+        repository: cpp-core/string
+        path: string
         
-    - name: Checkout cxx-depends
+    - name: Checkout depends
       uses: actions/checkout@v2
       with:
-        repository: melton1968/cxx-depends
+        repository: cpp-core/depends
         ref: main
-        path: cxx-depends
+        path: depends
         
     - name: Build dependencies
       run: |
         export CC=clang-11
         export CXX=clang++-11
-        mkdir cxx-depends/build && pushd cxx-depends/build
+        mkdir depends/build && pushd depends/build
         cmake -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/opt -DCORE_TEST=ON ..
         make cxx_core_string-depends
         popd
@@ -55,7 +42,7 @@ jobs:
       run: |
         export CC=clang-11
         export CXX=clang++-11
-        mkdir cxx-core-string/build && pushd cxx-core-string/build
+        mkdir string/build && pushd string/build
         cmake -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/opt ..
         make
         make check
