--- a/cmake/stringConfig.cmake.in
+++ b/cmake/stringConfig.cmake.in
@@ -4,9 +4,9 @@ include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
 check_required_components("@PROJECT_NAME@")
 
 include(CMakeFindDependencyMacro)
-find_dependency(cxx_core_pp)
-find_dependency(cxx_core_mp)
-find_dependency(cxx_core_tuple)
-find_dependency(cxx_core_fp)
-find_dependency(cxx_coro_stream)
+find_dependency(pp)
+find_dependency(mp)
+find_dependency(tuple)
+find_dependency(fp)
+find_dependency(stream)
 find_dependency(fmt)
