--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project (string VERSION 0.1 LANGUAGES C CXX)
 
 # Make including this file idempotent
 #
-if(TARGET string)
+if(TARGET string OR TARGET string::string)
   return()
 endif()
 
@@ -18,8 +18,14 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
   set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
   set(CMAKE_DOCS_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/docs)
   
-  # Have cmake output the compilation commands
+  # Have cmake output the compilation commands and create a link to it
+  # from the project root directory so the language server can find
+  # it.
+  #
   set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+  execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+    ${CMAKE_BINARY_DIR}/compile_commands.json
+    ${CMAKE_SOURCE_DIR}/compile_commands.json)
 endif()
 
 # Options for generating tests and documentation.
@@ -27,25 +33,15 @@ endif()
 option(STRING_TEST "Generate the tests." OFF)
 option(STRING_DOCS "Generate the docs." OFF)
 
-# Add our dependencies
-#
-include(GNUInstallDirs)
-find_package(pp REQUIRED)
-find_package(mp REQUIRED)
-find_package(tuple REQUIRED)
-find_package(fp REQUIRED)
-find_package(stream REQUIRED)
-find_package(fmt REQUIRED)
-
 # Output configuration
 #
-message("-- fp: Configuration: ${CMAKE_CURRENT_SOURCE_DIR}")
-message("-- fp: Included from: ${CMAKE_SOURCE_DIR}")
-message("-- fp: STRING_TEST ${STRING_TEST}")
-message("-- fp: STRING_DOCS ${STRING_DOCS}")
-message("-- fp: CMAKE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}")
+message("-- string: Configuration: ${CMAKE_CURRENT_SOURCE_DIR}")
+message("-- string: Included from: ${CMAKE_SOURCE_DIR}")
+message("-- string: STRING_TEST ${STRING_TEST}")
+message("-- string: STRING_DOCS ${STRING_DOCS}")
+message("-- string: CMAKE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}")
 
-# Compilation
+# Setup the compilation before adding dependencies
 #
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -56,6 +52,14 @@ add_compile_options(-stdlib=libc++)
 add_compile_options(-O)
 add_link_options(-stdlib=libc++)
 
+# Add our dependencies
+#
+include(cmake/cpp_core_find_package.cmake)
+cpp_core_find_package(fp)
+cpp_core_find_package(tuple)
+
+# Build the library
+#
 set(SOURCES
   string/compare
   string/join
@@ -68,32 +72,24 @@ set(SOURCES
   string/tolower
   string/trim)
 
+set(FILES)
 foreach(NAME ${SOURCES})
   list(APPEND FILES "src/core/${NAME}.cpp")
 endforeach()
 
 add_library(string ${FILES})
 
-target_link_libraries(string PUBLIC
-  pp::pp
-  mp::mp
-  tuple::tuple
-  fmt::fmt
-  )
+# Define the header files for this library.
+#
+file(GLOB_RECURSE PUBLIC_INCLUDE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} include/*.h)
+target_sources(string PUBLIC FILE_SET HEADERS BASE_DIRS include FILES ${PUBLIC_INCLUDE_FILES})
 
-target_include_directories(string
-  PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
+target_link_libraries(string PUBLIC fp::fp tuple::tuple)
 
 # Optionally configure the tests
 #
 if(STRING_TEST)
   enable_testing()
-  if (NOT TARGET check)
-    add_custom_target(check ${CMAKE_CTEST_COMMAND})
-    add_custom_target(check_detail ${CMAKE_CTEST_COMMAND} -V)
-  endif()
   add_subdirectory(test)
 endif()
 
@@ -107,4 +103,3 @@ endif()
 #
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/install_config.cmake)
 install_config(string)
-install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/core/string DESTINATION include/core/)
