Updated for super build.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,12 +1,6 @@
-cmake_minimum_required (VERSION 3.22 FATAL_ERROR)
+cmake_minimum_required (VERSION 3.24 FATAL_ERROR)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./bin)
-
-cpp_core_find_package(stream)
-cpp_core_find_package(GTest
-  URL https://github.com/cpp-core/googletest
-  VERSION v1.12.0
-  EXCLUDE_FROM_ALL)
+add_stream()
 find_package(Threads REQUIRED)
 
 set(TESTS
@@ -29,5 +23,4 @@ set(LIBRARIES
   GTest::gtest
   Threads::Threads)
 
-include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/configure_tests.cmake)
 configure_tests("core" "${LIBRARIES}" ${TESTS})
