--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 3.22 FATAL_ERROR)
+cmake_minimum_required (VERSION 3.24 FATAL_ERROR)
 project (string VERSION 0.1 LANGUAGES C CXX)
 
 # Make including this file idempotent
@@ -7,39 +7,43 @@ if(TARGET string OR TARGET string::string)
   return()
 endif()
 
-# Configuration variables.
-#
-# Build the tests and set directories if this is the master project
-#
-if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
-  set(STRING_TEST ON CACHE BOOL "Generate the tests.")
-  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-  set(CMAKE_DOCS_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/docs)
-  
-  # Have cmake output the compilation commands and create a link to it
-  # from the project root directory so the language server can find
-  # it.
-  #
-  set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-  execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-    ${CMAKE_BINARY_DIR}/compile_commands.json
-    ${CMAKE_SOURCE_DIR}/compile_commands.json)
-endif()
-
 # Options for generating tests and documentation.
 #
 option(STRING_TEST "Generate the tests." OFF)
 option(STRING_DOCS "Generate the docs." OFF)
 
+# If this is the current project.
+#
+if(PROJECT_NAME STREQUAL CMAKE_PROJECT_NAME)
+  # Include the cmake helpers
+  #
+  include(${CPP_CORE_SOURCE_DIR}/projects/cmake/utils/all.cmake)
+  include(${CPP_CORE_SOURCE_DIR}/projects/cmake/recipes/all.cmake)
+  
+  # Geneerte the tests
+  #
+  set(TUPLE_TEST ON CACHE BOOL "Generate the tests." FORCE)
+
+  # compile_commands.json
+  #
+  symlink_compile_commands()
+
+  # Convenience targets for git operations
+  #
+  make_submodule_pull_target()
+endif()
+
+# Put executables in the top-level binary directory
+#
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
 # Output configuration
 #
 message("-- string: Configuration: ${CMAKE_CURRENT_SOURCE_DIR}")
 message("-- string: Included from: ${CMAKE_SOURCE_DIR}")
-message("-- string: STRING_TEST ${STRING_TEST}")
-message("-- string: STRING_DOCS ${STRING_DOCS}")
-message("-- string: CMAKE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}")
+message("-- string: Install prefix ${CMAKE_INSTALL_PREFIX}")
+message("-- string: test ${STRING_TEST}")
+message("-- string: docs ${STRING_DOCS}")
 
 # Setup the compilation before adding dependencies
 #
@@ -54,9 +58,8 @@ add_link_options(-stdlib=libc++)
 
 # Add our dependencies
 #
-include(cmake/cpp_core_find_package.cmake)
-cpp_core_find_package(fp)
-cpp_core_find_package(tuple)
+add_fp()
+add_tuple()
 
 # Build the library
 #
@@ -90,7 +93,7 @@ target_link_libraries(string PUBLIC fp::fp tuple::tuple)
 # Optionally configure the tests
 #
 if(STRING_TEST)
-  enable_testing()
+  add_gtest()
   add_subdirectory(test)
 endif()
 
@@ -102,5 +105,4 @@ endif()
 
 # Installation
 #
-include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/install_config.cmake)
 install_config(string)
